--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
     margin-top: 2em;
     display: flex;
     flex-direction: column-reverse;
-    width: 70vh;
-    margin-left: 15vh;
+    width: 70vw;
+    margin-left: 15vw;
 }
 
 .noteTable{
@@ -31,14 +31,14 @@
 }
 
 .head{
-    /* border: 1px solid; */
+
     align-content: center;
     width: 40%;
     align-self: center;
 }
 .date{
     width: 40%;
-    /* border: 1px solid; */
+
 }
 
 body{
@@ -71,8 +71,8 @@ body{
 .editForm{
     width: 100%;
 }
-#list{
-    width: 79%;
+#editInput{
+    width: 77%;
 }
 .formButtons{
     width: 10%;
